# swagger/spring-server/src/main/java/io/AMT/gamification/entities/RuleEntity.java
@@ -13,12 +13,19 @@ public class RuleEntity implements Serializable {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private long id;
 
-    private String event;
-    private String propertyName;
-    private String propertyCondition;
+    private String apiKey;
 
-    private
+    private String ifEventType;
 
+    private String ifPropertyName;
+
+    private String ifPropertyCondition;
+
+    private Long thenBadgeId;
+
+    private Long thenPointScaleId;
+
+    private int thenAwardPoint;
 
     public long getId() {
         return id;
@@ -28,4 +35,59 @@ public class RuleEntity implements Serializable {
         this.id = id;
     }
 
+    public String getIfEventType() {
+        return ifEventType;
+    }
+
+    public void setIfEventType(String ifEventType) {
+        this.ifEventType = ifEventType;
+    }
+
+    public String getIfPropertyName() {
+        return ifPropertyName;
+    }
+
+    public void setIfPropertyName(String ifPropertyName) {
+        this.ifPropertyName = ifPropertyName;
+    }
+
+    public String getIfPropertyCondition() {
+        return ifPropertyCondition;
+    }
+
+    public void setIfPropertyCondition(String ifPropertyCondition) {
+        this.ifPropertyCondition = ifPropertyCondition;
+    }
+
+    public Long getThenBadgeId() {
+        return thenBadgeId;
+    }
+
+    public void setThenBadgeId(Long thenBadgeId) {
+        this.thenBadgeId = thenBadgeId;
+    }
+
+    public Long getThenPointScaleId() {
+        return thenPointScaleId;
+    }
+
+    public void setThenPointScaleId(Long thenPointScaleId) {
+        this.thenPointScaleId = thenPointScaleId;
+    }
+
+    public int getThenAwardPoint() {
+        return thenAwardPoint;
+    }
+
+    public void setThenAwardPoint(int thenAwardPoint) {
+        this.thenAwardPoint = thenAwardPoint;
+    }
+
+    public String getApiKey() {
+        return apiKey;
+    }
+
+    public void setApiKey(String apiKey) {
+        this.apiKey = apiKey;
+    }
 }
